--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "underscore": "1.8.3",
     "vhost": "3.0.2",
     "winston": "2.2.0",
+    "xml2js": "^0.4.17",
     "xmlbuilder": "^8.2.2",
-    "xmldom": "0.1.22"
+    "xmldom": "0.1.22",
+    "yauzl": "^2.6.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
