--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "lodash": "3.10.1",
     "mathjs": "1.7.1",
     "mocha": "2.4.5",
-    "moment": "^2.13.0",
-    "moment-timezone": "^0.5.4",
+    "moment": "2.13.0",
+    "moment-timezone": "0.5.4",
     "mongodb": "2.1.7",
     "mongoose": "4.4.6",
     "mongoose-timestamp": "^0.5.0",
@@ -57,7 +57,7 @@
     "underscore": "1.8.3",
     "vhost": "3.0.2",
     "winston": "2.2.0",
-    "xml2js": "^0.4.17",
+    "xml2js": "0.4.17",
     "xmlbuilder": "^8.2.2",
     "xmldom": "0.1.22",
     "yauzl": "^2.6.0"
