--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 env:
   - CXX=g++-4.8
 sudo: required
+dist: trusty
 addons:
   apt:
     sources:
@@ -11,6 +12,7 @@ addons:
     packages:
       - g++-4.8
 before_install:
+    - sudo apt-get install libgd2-dev
     - echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.0.list
     - sudo apt-get update
     - sudo apt-get install -y mongodb-org
@@ -19,7 +21,6 @@ before_install:
     - sleep 15
     - cd backend/test/integrated/
     - mongorestore
-    - sudo apt-get install libgd2-dev
 install: npm install
 services:
   - rabbitmq
