--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ addons:
       - g++-4.8
 before_install:
     - sudo apt-get install libgd2-dev
-    - echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.0.list
+    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10
+    - echo "deb http://repo.mongodb.org/apt/ubuntu trusty/mongodb-org/3.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.0.list
     - sudo apt-get update
     - sudo apt-get install -y mongodb-org
     - mongod --version
