--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
     "font-awesome": "~4.4.0",
     "masonry": "~3.3.0",
     "moment": "~2.10.6",
-    "socket.io-client": "~1.3.6",
+    "socket.io-client": "1.4.5",
     "angular-material": "~1.1.0",
     "angular-animate": "~1.4.7",
     "angular-aria": "~1.4.7",
