--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "underscore": "1.8.3",
     "vhost": "3.0.2",
     "winston": "2.2.0",
+    "winston-daily-rotate-file": "^1.3.1",
     "xml2js": "0.4.17",
     "xmlbuilder": "8.2.2",
     "xmldom": "0.1.22",
