--- a/.jshintrc
+++ b/.jshintrc
@@ -4,6 +4,7 @@
   "eqeqeq": true,
   "forin": true,
   "freeze": true,
+  "varstmt" : true,
   //"futurehostile": true,
   //"maxcomplexity": 4,
   //"maxdepth": 2,
@@ -18,7 +19,8 @@
       "require": false,
       "Buffer": false,
       "describe": false,
-      "it": false
+      "it": false,
+	  "process": false
     },
   "quotmark": true,
   "undef": true,
