--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment-timezone": "0.5.4",
     "mongodb": "2.1.7",
     "mongoose": "4.4.6",
+    "mongoose-double": "0.0.1",
     "mongoose-timestamp": "0.5.0",
     "multer": "1.1.0",
     "multiparty": "4.1.2",
