--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "moment": "2.13.0",
     "moment-timezone": "0.5.4",
     "mongodb": "2.2.16",
-    "mongoose": "4.7.5",
+    "mongoose": "4.7.6",
     "mongoose-double": "0.0.1",
     "mongoose-timestamp": "0.5.0",
     "multer": "1.1.0",
@@ -68,24 +68,24 @@
   "devDependencies": {
     "chai": "3.5.0",
     "grunt": "0.4.5",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-cssmin": "^1.0.0",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-env": "^0.4.4",
-    "grunt-environment": "^0.4.2",
-    "grunt-mocha-test": "^0.12.7",
-    "grunt-webfont": "^1.1.0",
-    "jshint": "^2.8.0",
+    "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-cssmin": "1.0.0",
+    "grunt-contrib-jshint": "0.11.3",
+    "grunt-contrib-uglify": "0.9.2",
+    "grunt-env": "0.4.4",
+    "grunt-environment": "0.4.2",
+    "grunt-mocha-test": "0.12.7",
+    "grunt-webfont": "1.1.0",
+    "jshint": "2.8.0",
     "minify": "1.4.23",
     "mockgoose": "6.0.3",
-    "mongo-mock": "^2.0.0",
-    "mongoose-mock": "^0.4.0",
-    "proxyquire": "^1.7.4",
-    "response-time": "^2.3.1",
-    "sinon": "^1.17.3",
-    "socket.io-client-cookie": "^0.1.0",
-    "supertest": "^1.2.0",
-    "xmlhttprequest": "^1.8.0"
+    "mongo-mock": "2.0.0",
+    "mongoose-mock": "0.4.0",
+    "proxyquire": "1.7.4",
+    "response-time": "2.3.1",
+    "sinon": "1.17.3",
+    "socket.io-client-cookie": "0.1.0",
+    "supertest": "1.2.0",
+    "xmlhttprequest": "1.8.0"
   }
 }
