--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "geodesy": "1.1.0",
     "gm": "1.23.0",
     "jade": "1.11.0",
+    "json2csv": "^3.7.3",
     "jsonschema": "1.1.0",
     "lodash": "3.10.1",
     "mathjs": "1.7.1",
