--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "grunt-contrib-cssmin": "1.0.0",
     "grunt-contrib-jshint": "0.11.3",
     "grunt-contrib-uglify": "0.9.2",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-env": "0.4.4",
     "grunt-environment": "0.4.2",
     "grunt-mocha-test": "0.12.7",
