--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "socket.io": "1.4.5",
     "socket.io-client": "1.3.7",
     "underscore": "1.8.3",
+    "uuid": "^3.0.1",
     "vhost": "3.0.2",
     "winston": "2.2.0",
     "winston-daily-rotate-file": "1.3.1",
