--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "fs.extra": "1.3.2",
     "geodesy": "1.1.1",
     "gm": "1.23.0",
-    "jade": "1.11.0",
     "json2csv": "^3.8.0",
     "jsonschema": "1.1.1",
     "lodash": "4.17.4",
@@ -52,6 +51,7 @@
     "nodemailer": "4.0.1",
     "paypal-rest-sdk": "1.7.1",
     "phantom": "4.0.4",
+    "pug": "^2.0.0-rc.2",
     "serve-favicon": "2.4.3",
     "session-file-store": "1.0.0",
     "shortid": "2.2.8",
