--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,14 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "angular": "1.5.5",
-    "angular-animate": "1.4.7",
     "angular-aria": "1.4.7",
+    "angular-sanitize": "1.4.8",
     "angular-material": "1.1.0",
     "angular-recaptcha": "3.0.3",
     "angular-ui-router": "0.4.2",
-    "material-design-icons": "2.2.3",
     "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
-    "css-loader": "^0.28.4",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
@@ -36,8 +34,6 @@
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
-    "merge-stream": "^1.0.1",
-    "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
     "webpack-stream": "^3.2.0"
   }
